fix for z-index issue

--- a/src/components/LoginBox/Login/Login.module.css
+++ b/src/components/LoginBox/Login/Login.module.css
@@ -7,6 +7,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
+    z-index: 1000;
 }
 
 .Login input {
